syntax = "proto3";

package million.ss.logger;

message TcpConnection {
    
}

message SetLevel {
    
}